WanaLyzer/out/numpy/typing/tests/data/pass/mod.pyi
from _typeshed import Incomplete

f8: Incomplete
i8: Incomplete
u8: Incomplete
f4: Incomplete
i4: Incomplete
u4: Incomplete
td: Incomplete
b_: Incomplete
b: Incomplete
f: Incomplete
i: Incomplete
AR: Incomplete
AR2: Incomplete
