WanaLyzer/out/numpy/typing/tests/data/fail/bitwise_ops.pyi
from _typeshed import Incomplete

i8: Incomplete
i4: Incomplete
u8: Incomplete
b_: Incomplete
i: Incomplete
f8: Incomplete
